<resources>
    <string name="app_name">Profile</string>
    <string name="_3_hr">3 hr</string>
    <string name="engineer">engineer</string>
    <string name="russian">Russian</string>
    <string name="eg">UK</string>
    <string name="_150_reviews">(150 Reviews)</string>
    <string name="_4_5">4.5</string>
    <string name="Russian">Russian</string>
    <string name="_5_days_ago">5 Days ago</string>
    <string name="Ahmed_hassan">Ahmed hassan</string>
    <string name="Engineer">engineer</string>
</resources>